--- a/Hawk.Core/Themes/Theme.xaml
+++ b/Hawk.Core/Themes/Theme.xaml
@@ -97,8 +97,8 @@
                                     <RowDefinition />
                                 </Grid.RowDefinitions>
                                 <StackPanel Orientation="Horizontal" Margin="0,0,10,0">
-                                    <TextBlock Text="{Binding Name}" FontSize="20" />
-                                    <TextBlock Text="{Binding ItemCount, StringFormat=(共\{0\}项)}" FontSize="20" />
+                                    <TextBlock Text="{Binding Name}"  />
+                                    <TextBlock Text="{Binding ItemCount, StringFormat=(共\{0\}项)}"  />
                                 </StackPanel>
                                 <Line Grid.Column="1" SnapsToDevicePixels="true" X1="0" X2="1" Stretch="Fill"
                                       StrokeThickness="1" />
